# search_engine

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
Configs/: config.json  file3.txt  requests.json
DataModels/: Engine.cpp  Engine.h
DataModels/JSONInterfaces/: JSONAnswer.cpp  JSONAnswer.h  JSONBase.cpp  JSONBase.h  JSONConfig.cpp  JSONConfig.h  JSONRequest.cpp  JSONRequest.h
DataModels/JSONWorkers/: Answer.cpp  Answer.h  Config.cpp  Config.h  Request.cpp  Request.h
DataModels/Models/: AnswerModel.h  WordCounter.h  WordIndex.cpp  WordIndex.h
DataModels/ThreadPool/: ThreadPoolI.cpp  ThreadPoolI.h
Tests/: PreloadJSON.h  Tests.cpp
